--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ Les interventions se dérouleront dans le respect des dispositions légales sur 
 Les sites sont accessibles principalement par voie fluviale. Les saisons doivent être prises en compte pour l’accessibilité des centrales.`,
     image:'./images/JURISTE_3.jpeg'
   },
-  'Chef d'équipe':{
+  'Chef d'Chef d\'équipe':{
     text:`On distingue deux niveaux de maintenance :
 • Maintenance préventive et systématique sur site, exécutée à des intervalles régulières. La maintenance préventive est destinée à réduire la probabilité de défaillance ou de dégradation du fonctionnement des installations.
 
